export Internal modules

--- a/gogol/gogol.cabal
+++ b/gogol/gogol.cabal
@@ -48,8 +48,7 @@ library
         , Network.Google.Compute.Metadata
         , Network.Google.Env
 
-    other-modules:
-          Network.Google.Internal.Auth
+        , Network.Google.Internal.Auth
         , Network.Google.Internal.Body
         , Network.Google.Internal.HTTP
         , Network.Google.Internal.Logger
