--- a/gogol/gogol.cabal
+++ b/gogol/gogol.cabal
@@ -61,6 +61,7 @@ library
         , base                 >= 4.7
         , bytestring           >= 0.9
         , case-insensitive     >= 1.2
+        , conduit
         , conduit-extra        >= 1.1
         , cryptonite           >= 0.6
         , data-default-class   >= 0.0.1
